--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -144,9 +144,6 @@
       .footer a{
       color:#ff6600 !important;
       }
-      h2 {
-      color:#ff6600;;
-      }		  
       h1 {
       color:#fff;
       font-size:20px;
@@ -1049,7 +1046,7 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
         </div>
       </div>
     </div>	
-      <div id="myModal" class="modal">
+      <div oncontextmenu="return false;" id="myModal" class="modal">
         <div class="modal-content">
           <span class="close">&times;</span>
           <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
