--- a/policy-based-routing-website.html
+++ b/policy-based-routing-website.html
@@ -306,7 +306,7 @@
       background-color: #f0f0f0;
       color: #111;
       }
- /* LOGIN Content */
+		/* LOGIN Content */
       .forms-out {
       margin: 0 auto;
       padding: 0;
@@ -558,7 +558,7 @@
         </div>
       </div>
     </div>	
-    <div id="myModal" class="modal">
+    <div oncontextmenu="return false;" id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
         <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
