--- a/vpn-game-generator.html
+++ b/vpn-game-generator.html
@@ -1005,7 +1005,7 @@
         </div>
       </div>
     </div>	
-    <div id="myModal" class="modal">
+    <div oncontextmenu="return false;" id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
         <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
