--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
         </div>
       </div>
     </div>
-    <div oncontextmenu="return false;" id="myModal" class="modal">
+    <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
         <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
