--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -455,7 +455,7 @@
       <div id="homepage" class="hide">
         <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold;font-size:14px" id="signout">Logout</button>
         <span style="font-weight:normal">ID: <span style="color:green;font-size:14px" id="welcome-email"></span></span>
-        <span style="font-weight:normal; font-size:14px"> ** E-Mail Verified: <span style="" id="email_Verified"></span> Successfully</span> 
+        <span style="font-weight:normal; font-size:14px"> ** E-Mail Verified: <span style="font-size:14px" id="email_Verified"></span></span>  
         <button id="verify" style="width:120px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px" onclick="sendVerificationEmail()">Verified Now!</button>
       </div>
     </div>
