--- a/mikrotik-share-user-multi-login.html
+++ b/mikrotik-share-user-multi-login.html
@@ -451,11 +451,11 @@
         <img style="float:right; margin-right:10px;margin-top:2px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
       </ul>
       <div id="homepage" class="hide">
-        <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold;font-size:14px" id="signout">Logout</button>
-        <span style="font-weight:normal">ID: <span style="color:green;font-size:14px" id="welcome-email"></span></span>
-        <span style="font-weight:normal; font-size:14px"> ** E-Mail Verified: <span style="font-size:14px" id="email_Verified"></span></span>  
-        <button id="verify" style="width:120px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px" onclick="sendVerificationEmail()">Verified Now!</button>
-      </div>	  
+        <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+        <span style="font-weight:normal;font-size:14px">Welcome: <span style="color:green;font-weight:bold;" id="welcome-email"></span></span>
+        <span style="font-weight:normal; font-size:14px"> - Verified Status: [ <span id="email_Verified"></span> ]</span> 
+        <button id="verify" style="width:100px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px" onclick="sendVerificationEmail()">Verify Now!</button>
+      </div>  
     </div>
     <div id="wrap">
     <div class="logo">
