--- a/port-knocking-icmp.html
+++ b/port-knocking-icmp.html
@@ -437,7 +437,7 @@
       margin: auto;
       padding: 20px;
       border: 1px solid #444;
-      width: 380px;
+      width: 400px;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
       font-weight:bold;
       }
@@ -479,11 +479,11 @@
         <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
       </ul>
       <div id="homepage" class="hide">
-        <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold;font-size:14px" id="signout">Logout</button>
-        <span style="font-weight:normal">ID: <span style="color:green;font-size:14px" id="welcome-email"></span></span>
-        <span style="font-weight:normal; font-size:14px"> ** E-Mail Verified: <span style="font-size:14px" id="email_Verified"></span></span>  
-        <button id="verify" style="width:120px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px" onclick="sendVerificationEmail()">Verified Now!</button>
-      </div>	  
+        <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+        <span style="font-weight:normal;font-size:14px">Welcome: <span style="color:green;font-weight:bold;" id="welcome-email"></span></span>
+        <span style="font-weight:normal; font-size:14px"> - Verified Status: [ <span id="email_Verified"></span> ]</span> 
+        <button id="verify" style="width:100px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px" onclick="sendVerificationEmail()">Verify Now!</button>
+      </div>  
     </div>
     <div id="wrap">
       <div class="logo">
