--- a/simple-queue-generator.html
+++ b/simple-queue-generator.html
@@ -410,7 +410,7 @@
       margin: auto;
       padding: 20px;
       border: 1px solid #444;
-      width: 380px;
+      width: 400px;
       box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
       font-weight:bold;
       }
@@ -649,6 +649,7 @@
         <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
         <p><b>PayPal</b>  <a target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
         <p><b>Saweria</b> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
+        <p><b>Buymeacoffee</b> <a target="_blank" href="https://www.buymeacoffee.com/bntpbun">buymeacoffee.com/bntpbun</a></p>		
         <p><b>Bitcoin</b> <span style="font-size:11px;color:#ff6600">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
         <br>
         <div style="float:left;margin-right:3px; margin-top:0px">
