--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -1050,11 +1050,11 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
         <div class="modal-content">
           <span class="close">&times;</span>
           <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
-		  <div style="font-size:16px;font-weight:bold;margin-bottom:17px; margin-top:10px; color:#fff !important">
-          <p><b>PayPal</b> <a style="font-size:14px;color:#ff6600;"target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
-          <p><b>Saweria</b> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
-		  <p><b>Buymeacoffee</b> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://www.buymeacoffee.com/bntpbun">buymeacoffee.com/bntpbun</a></p>
-          <p><b>Bitcoin</b> <span style="font-size:11px;color:#ff6600">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
+		  <div style="font-weight:bold;margin-bottom:17px; margin-top:10px; color:#fff !important">
+          <p><span style="color:#ffffff !important; font-size:16px">PayPal</span> <a style="font-size:14px;color:#ff6600;"target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
+          <p><span style="color:#ffffff !important; font-size:16px">Saweria</span> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
+		  <p><span style="color:#ffffff !important; font-size:16px">Buymeacoffee <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://www.buymeacoffee.com/bntpbun">buymeacoffee.com/bntpbun</a></p>
+          <p><span style="color:#ffffff !important; font-size:16px">Bitcoin</span> <span style="font-size:11px;color:#ff6600">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
           <br>
           <div style="float:left;margin-right:3px; margin-top:0px">
             <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
