--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -1050,7 +1050,7 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
         <div class="modal-content">
           <span class="close">&times;</span>
           <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
-		  <div style="font-weight:bold;margin-bottom:17px; margin-top:10px; color:#fff !important">
+		  <div style="font-weight:bold; margin-top:10px; color:#fff !important">
           <p><span style="color:#ffffff !important; font-size:16px">PayPal</span> <a style="font-size:14px;color:#ff6600;"target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
           <p><span style="color:#ffffff !important; font-size:16px">Saweria</span> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
 		  <p><span style="color:#ffffff !important; font-size:16px">Buymeacoffee <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://www.buymeacoffee.com/bntpbun">buymeacoffee.com/bntpbun</a></p>
