--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
               <label>Password <span style="font-weight:normal; font-size:13px"> - Don't use your real e-mail password.</span></label>
               <input style="margin-top:5px" type="password" id="registration-password" placeholder="Password"></input>
               <button style="width:100% !important;" id="register">Sign Up</button><br>
-              <span style="font-weight:normal !important; float:right"><span id="show-login">Back to Sign-In</span></span>
+              <span style="font-weight:normal !important; float:right"><span id="show-login">Already a member? Sign-In</span></span>
             </div>
             <div id="login-page">
               <span style="font-size:25px !important; color:#ff6600;">SIGN IN</span>
