--- a/login/index.html
+++ b/login/index.html
@@ -284,9 +284,9 @@
       } 
     </style>
   </head>
-  <body>
   <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>
+  <body>
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
     <div class="mymenu">
@@ -300,7 +300,7 @@
         <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
         <span style="font-weight:normal;font-size:14px">Welcome: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> - Verified Status: [ <span id="email_Verified"></span> ]</span> 
-        <button id="verify" style="width:100px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:green">Verify Now!</button>
+        <button id="verify" style="width:100px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:green" onclick="sendVerificationEmail()">Verify Now!</button>
       </div>
     </div>
     <div id="myLogin" class="modal-login">
@@ -330,11 +330,7 @@
               <br>
               <span style="font-weight:normal"> <span id="forgot-password">Forgot Password?</span></span>
               <span style="font-weight:normal !important; float:right"><span id="show-register">Not a member? Sign-Up</span></span>	
-			  
-			  <br><br>
-			  <span id="google-sign-in">Sign-In with Google</span>
             </div>
-			
           </div>
         </div>
       </div>
@@ -360,292 +356,7 @@
     </div>
     </div>
     <script>
-     var modal_click = document.getElementById("myModal");
-     var span_click = document.getElementsByClassName("close")[0];
-
-     function callmodal() {
-     	modal_click.style.display = "block";
-     }
-     span_click.onclick = function() {
-     	modal_click.style.display = "none";
-     }
-     window.onclick = function(event) {
-     	if (event.target == modal_click) {
-     		modal_click.style.display = "none";
-     	}
-     }
-
-     // Your web app's Firebase configuration
-     var firebaseConfig = {
-     	apiKey: "AIzaSyAVAJkbUGmPHogF_WJRa3vxZ2YuKDsvqns",
-     	authDomain: "buananetpbun-5d979.firebaseapp.com",
-     	databaseURL: "https://buananetpbun-5d979.firebaseio.com",
-     	projectId: "buananetpbun-5d979",
-     	storageBucket: "buananetpbun-5d979.appspot.com",
-     	messagingSenderId: "912166778245",
-     	appId: "1:912166778245:web:c845ec7e720f7bd84580ec",
-     	measurementId: "G-FSDV7HGD99"
-		
-     };
-
-     // Initialize Firebase
-     firebase.initializeApp(firebaseConfig);
-
-     //invokes firebase authentication.
-     const auth = firebase.auth();
-	 
-	 
-	 const provider = new firebase.auth.GoogleAuthProvider();
-	 
-	 firebase.auth().signInWithPopup(provider).then(function(result) {
-   // This gives you a Google Access Token. You can use it to access the Google API.
-   var token = result.credential.accessToken;
-   // The signed-in user info.
-   var user = result.user;
-   // ...
- }).catch(function(error) {
-   // Handle Errors here.
-   var errorCode = error.code;
-   var errorMessage = error.message;
-   // The email of the user's account used.
-   var email = error.email;
-   // The firebase.auth.AuthCredential type that was used.
-   var credential = error.credential;
-   // ...
- });
- 
- 
- firebase.auth().getRedirectResult().then(function(result) {
-   if (result.credential) {
-     // This gives you a Google Access Token. You can use it to access the Google API.
-     var token = result.credential.accessToken;
-     // ...
-   }
-   // The signed-in user info.
-   var user = result.user;
- }).catch(function(error) {
-   // Handle Errors here.
-   var errorCode = error.code;
-   var errorMessage = error.message;
-   // The email of the user's account used.
-   var email = error.email;
-   // The firebase.auth.AuthCredential type that was used.
-   var credential = error.credential;
-   // ...
- });
- 
- 
-
- 
-      document.querySelector("#google-sign-in").addEventListener("click", () => {
-     	        console.log('Login Btn Call')
-        firebase.auth().signInWithPopup(provider).then(res=>{
-
-        }).catch(e=>{
-
-        })
-     });
-	 
-
-     firebase.auth().onAuthStateChanged((user) => {
-     	if (user) {
-     		// User is signed in, see docs for a list of available properties
-     		// https://firebase.google.com/docs/reference/js/firebase.User
-     		const uid = user.uid;
-     		const email = user.email;
-     		const emailVerified = user.emailVerified;
-
-     		document.getElementById('welcome-email').innerHTML = email
-
-     		if (emailVerified == true) {
-     			document.getElementById("verify").style.display = "none"
-     			document.getElementById('email_Verified').innerHTML = "✔️"
-     		} else {
-     			document.getElementById('email_Verified').innerHTML = "❌"
-     		}
-
-     	} else {
-
-     	}
-     });
-
-     const user = firebase.auth().currentUser;
-
-
-     function sendVerificationEmail() {
-     	var user = firebase.auth().currentUser;
-     	user.sendEmailVerification().then(function() {
-     		window.alert("Verification link sent to your email. if you don't see it, please check on the spam folder.")
-     	}).catch(function(error) {
-     		// An error happened.
-     		var errorCode = error.code;
-     		var errorMessage = error.message;
-     		alert(errorMessage);
-     	});
-     }
-	 
-	 document.querySelector("#verify").addEventListener("click", () => {
-     	sendVerificationEmail();
-     });
-
-
-     document.querySelector("#show-register").addEventListener("click", () => {
-     	showRegistration();
-     });
-
-
-     const showRegistration = () => {
-     	document.querySelector("#registration-page").classList.remove("hide");
-     	document.querySelector("#login-page").classList.add("hide");
-     	document.querySelector("#homepage").classList.add("hide");
-     	document.querySelector("#show-login").classList.remove("hide");
-     	document.querySelector("#show-register").classList.add("hide");
-     };
-
-     document.querySelector("#show-login").addEventListener("click", () => {
-     	showLogin();
-     });
-
-     const showLogin = () => {
-     	document.querySelector("#registration-page").classList.add("hide");
-     	document.querySelector("#login-page").classList.remove("hide");
-     	document.querySelector("#homepage").classList.add("hide");
-     	document.querySelector("#show-login").classList.add("hide");
-     	document.querySelector("#show-register").classList.remove("hide");
-     };
-
-     document.querySelector("#signout").addEventListener("click", () => {
-     	signOut();
-     });
-
-     const register = () => {
-     	const email = document.querySelector("#registration-email").value;
-     	const reemail = document.querySelector("#registration-reemail").value;
-     	const password = document.querySelector("#registration-password").value;
-
-     	if (email.trim() == "") {
-     		alert("Enter E-mail.");
-     	} else if (password.trim().length < 6) {
-     		alert("Password must be at least 6 characters.");
-     	} else if (email != reemail) {
-     		alert("emails do not match.");
-     	} else {
-     		auth
-     			.createUserWithEmailAndPassword(email, password)
-
-     			.catch(function(error) {
-     				// Handle Errors here.
-     				var errorCode = error.code;
-     				var errorMessage = error.message;
-     				alert(errorMessage);
-     				// ...
-     			});
-     	}
-     };
-
-     document.querySelector("#register").addEventListener("click", () => {
-     	register();
-     });
-
-     //register when you hit the enter key
-     document
-     	.querySelector("#registration-password")
-     	.addEventListener("keyup", (e) => {
-     		if (event.keyCode === 13) {
-     			e.preventDefault();
-     			register();
-     		}
-     	});
-
-
-     const login = () => {
-     	const email = document.querySelector("#login-email").value;
-     	const password = document.querySelector("#login-password").value;
-
-     	if (email.trim() == "") {
-     		alert("Enter E-mail.");
-     	} else if (password.trim() == "") {
-     		alert("Enter Password.");
-     	} else {
-     		authenticate(email, password);
-     	}
-     };
-
-     document.querySelector("#login").addEventListener("click", () => {
-     	login();
-     });
-
-     //sign in when you hit enter
-     document
-     	.querySelector("#login-password")
-     	.addEventListener("keyup", (e) => {
-     		if (event.keyCode === 13) {
-     			e.preventDefault();
-     			login();
-     		}
-     	});
-
-     const authenticate = (email, password) => {
-     	const auth = firebase.auth();
-     	auth.signInWithEmailAndPassword(email, password);
-     	firebase
-     		.auth()
-     		.signInWithEmailAndPassword(email, password)
-     		.catch(function(error) {
-     			// Handle Errors here.
-     			var errorCode = error.code;
-     			var errorMessage = error.message;
-
-     			alert(errorMessage);
-     		});
-     };
-
-     const showHomepage = () => {
-     	document.querySelector("#registration-page").classList.add("hide");
-     	document.querySelector("#login-page").classList.add("hide");
-     	document.querySelector("#homepage").classList.remove("hide");
-     	document.querySelector("#myLogin").style.display = "none";
-     };
-
-     const signOut = () => {
-     	firebase
-     		.auth()
-     		.signOut()
-     		.then(function() {
-     			location.reload();
-     		})
-     		.catch(function(error) {
-     			alert("error signing out, check network connection");
-     		});
-     };
-
-     auth.onAuthStateChanged((firebaseUser) => {
-     	if (firebaseUser) {
-     		showHomepage();
-     	}
-     });
-
-     document
-     	.querySelector("#forgot-password")
-     	.addEventListener("click", () => {
-     		const email = document.querySelector("#login-email").value;
-     		if (email.trim() == "") {
-     			alert("Enter Your E-mail.");
-     		} else {
-     			forgotPassword(email);
-     		}
-     	});
-
-     const forgotPassword = (email) => {
-     	auth
-     		.sendPasswordResetEmail(email)
-     		.then(function() {
-     			alert("Send to your e-mail successfully! if you don't see it, please check on the spam folder.");
-     		})
-     		.catch(function(error) {
-     			alert("invalid e-mail or bad network connection.");
-     		});
-     };
+  const _0xade7fa=_0x17c8;(function(_0xf9f23e,_0x1d59e5){const _0x3732e3=_0x17c8,_0x44e673=_0xf9f23e();while(!![]){try{const _0x28231f=parseInt(_0x3732e3(0x1fb))/0x1+parseInt(_0x3732e3(0x227))/0x2+-parseInt(_0x3732e3(0x232))/0x3*(-parseInt(_0x3732e3(0x225))/0x4)+-parseInt(_0x3732e3(0x20f))/0x5*(parseInt(_0x3732e3(0x1f9))/0x6)+parseInt(_0x3732e3(0x236))/0x7+parseInt(_0x3732e3(0x238))/0x8+-parseInt(_0x3732e3(0x1f7))/0x9;if(_0x28231f===_0x1d59e5)break;else _0x44e673['push'](_0x44e673['shift']());}catch(_0x52df3b){_0x44e673['push'](_0x44e673['shift']());}}}(_0x3131,0xc76bd));function _0x3131(){const _0x3b2676=['#login-password','#homepage','1:912166778245:web:c845ec7e720f7bd84580ec','#registration-password','hide','3225240vkQOLV','Enter\x20Your\x20E-mail.','39612BrCPDx','AIzaSyAVAJkbUGmPHogF_WJRa3vxZ2YuKDsvqns','1209762IwMiLi','#signout','emails\x20do\x20not\x20match.','then','preventDefault','sendPasswordResetEmail','Enter\x20Password.','emailVerified','getElementById','none','onclick','Password\x20must\x20be\x20at\x20least\x206\x20characters.','G-FSDV7HGD99','target','keyCode','currentUser','#login-email','#show-register','#registration-page','message','865MepYMO','alert','verify','buananetpbun-5d979.firebaseapp.com','reload','buananetpbun-5d979','signOut','invalid\x20e-mail\x20or\x20bad\x20network\x20connection.','block','initializeApp','sendEmailVerification','#show-login','#login-page','auth','https://buananetpbun-5d979.firebaseio.com','addEventListener','catch','#login','#forgot-password','#myLogin','signInWithEmailAndPassword','add','64964WroqOq','buananetpbun-5d979.appspot.com','1217696JUDixK','click','querySelector','keyup','trim','Enter\x20E-mail.','length','onAuthStateChanged','#register','email_Verified','style','3ytJegj','myModal','display','912166778245','1762670aKKqAu','value','1845392SdnDBt','email','code','classList','Send\x20to\x20your\x20e-mail\x20successfully!\x20if\x20you\x20don\x27t\x20see\x20it,\x20please\x20check\x20on\x20the\x20spam\x20folder.','#registration-reemail','innerHTML','remove'];_0x3131=function(){return _0x3b2676;};return _0x3131();}var modal_click=document['getElementById'](_0xade7fa(0x233)),span_click=document['getElementsByClassName']('close')[0x0];function callmodal(){const _0x2d6244=_0xade7fa;modal_click[_0x2d6244(0x231)]['display']=_0x2d6244(0x217);}span_click[_0xade7fa(0x205)]=function(){const _0x4ca7d6=_0xade7fa;modal_click['style'][_0x4ca7d6(0x234)]='none';},window[_0xade7fa(0x205)]=function(_0x199070){const _0x10ab26=_0xade7fa;_0x199070[_0x10ab26(0x208)]==modal_click&&(modal_click['style'][_0x10ab26(0x234)]=_0x10ab26(0x204));};var firebaseConfig={'apiKey':_0xade7fa(0x1fa),'authDomain':_0xade7fa(0x212),'databaseURL':_0xade7fa(0x21d),'projectId':_0xade7fa(0x214),'storageBucket':_0xade7fa(0x226),'messagingSenderId':_0xade7fa(0x235),'appId':_0xade7fa(0x1f4),'measurementId':_0xade7fa(0x207)};firebase[_0xade7fa(0x218)](firebaseConfig);const auth=firebase[_0xade7fa(0x21c)]();firebase[_0xade7fa(0x21c)]()['onAuthStateChanged'](_0xd6714c=>{const _0x5787b8=_0xade7fa;if(_0xd6714c){const _0x138e7c=_0xd6714c['uid'],_0xf0e4f=_0xd6714c[_0x5787b8(0x1eb)],_0x50842f=_0xd6714c[_0x5787b8(0x202)];document['getElementById']('welcome-email')['innerHTML']=_0xf0e4f,_0x50842f==!![]?(document[_0x5787b8(0x203)](_0x5787b8(0x211))[_0x5787b8(0x231)][_0x5787b8(0x234)]=_0x5787b8(0x204),document['getElementById'](_0x5787b8(0x230))[_0x5787b8(0x1f0)]='✔️'):document[_0x5787b8(0x203)]('email_Verified')['innerHTML']='❌';}else{}});const user=firebase[_0xade7fa(0x21c)]()[_0xade7fa(0x20a)];function sendVerificationEmail(){const _0x945dc4=_0xade7fa;var _0x52cc9f=firebase[_0x945dc4(0x21c)]()[_0x945dc4(0x20a)];_0x52cc9f[_0x945dc4(0x219)]()[_0x945dc4(0x1fe)](function(){const _0x329d2=_0x945dc4;window[_0x329d2(0x210)]('Verification\x20link\x20sent\x20to\x20your\x20email.\x20if\x20you\x20don\x27t\x20see\x20it,\x20please\x20check\x20on\x20the\x20spam\x20folder.');})[_0x945dc4(0x21f)](function(_0x28e8f1){const _0x5a01bc=_0x945dc4;var _0x232202=_0x28e8f1[_0x5a01bc(0x1ec)],_0x40612e=_0x28e8f1['message'];alert(_0x40612e);});}document[_0xade7fa(0x229)](_0xade7fa(0x20c))[_0xade7fa(0x21e)]('click',()=>{showRegistration();});const showRegistration=()=>{const _0x55ab33=_0xade7fa;document[_0x55ab33(0x229)](_0x55ab33(0x20d))[_0x55ab33(0x1ed)][_0x55ab33(0x1f1)](_0x55ab33(0x1f6)),document[_0x55ab33(0x229)](_0x55ab33(0x21b))[_0x55ab33(0x1ed)][_0x55ab33(0x224)]('hide'),document[_0x55ab33(0x229)](_0x55ab33(0x1f3))[_0x55ab33(0x1ed)][_0x55ab33(0x224)](_0x55ab33(0x1f6)),document[_0x55ab33(0x229)](_0x55ab33(0x21a))[_0x55ab33(0x1ed)]['remove'](_0x55ab33(0x1f6)),document[_0x55ab33(0x229)]('#show-register')[_0x55ab33(0x1ed)][_0x55ab33(0x224)]('hide');};document[_0xade7fa(0x229)](_0xade7fa(0x21a))[_0xade7fa(0x21e)]('click',()=>{showLogin();});const showLogin=()=>{const _0x40a5e1=_0xade7fa;document['querySelector'](_0x40a5e1(0x20d))[_0x40a5e1(0x1ed)]['add'](_0x40a5e1(0x1f6)),document[_0x40a5e1(0x229)]('#login-page')['classList'][_0x40a5e1(0x1f1)](_0x40a5e1(0x1f6)),document[_0x40a5e1(0x229)](_0x40a5e1(0x1f3))['classList'][_0x40a5e1(0x224)](_0x40a5e1(0x1f6)),document[_0x40a5e1(0x229)](_0x40a5e1(0x21a))['classList'][_0x40a5e1(0x224)](_0x40a5e1(0x1f6)),document[_0x40a5e1(0x229)](_0x40a5e1(0x20c))['classList'][_0x40a5e1(0x1f1)](_0x40a5e1(0x1f6));};document[_0xade7fa(0x229)](_0xade7fa(0x1fc))[_0xade7fa(0x21e)]('click',()=>{signOut();});const register=()=>{const _0x35f303=_0xade7fa,_0x2d500a=document[_0x35f303(0x229)]('#registration-email')[_0x35f303(0x237)],_0x28557a=document[_0x35f303(0x229)](_0x35f303(0x1ef))['value'],_0x32dbc6=document[_0x35f303(0x229)]('#registration-password')[_0x35f303(0x237)];if(_0x2d500a[_0x35f303(0x22b)]()=='')alert('Enter\x20E-mail.');else{if(_0x32dbc6[_0x35f303(0x22b)]()[_0x35f303(0x22d)]<0x6)alert(_0x35f303(0x206));else _0x2d500a!=_0x28557a?alert(_0x35f303(0x1fd)):auth['createUserWithEmailAndPassword'](_0x2d500a,_0x32dbc6)[_0x35f303(0x21f)](function(_0x1255da){const _0x24a844=_0x35f303;var _0x276c4e=_0x1255da[_0x24a844(0x1ec)],_0x3aeaec=_0x1255da['message'];alert(_0x3aeaec);});}};document['querySelector'](_0xade7fa(0x22f))[_0xade7fa(0x21e)](_0xade7fa(0x228),()=>{register();}),document[_0xade7fa(0x229)](_0xade7fa(0x1f5))[_0xade7fa(0x21e)](_0xade7fa(0x22a),_0x5afa58=>{const _0x56a079=_0xade7fa;event[_0x56a079(0x209)]===0xd&&(_0x5afa58[_0x56a079(0x1ff)](),register());});const login=()=>{const _0x212346=_0xade7fa,_0x3f52ad=document[_0x212346(0x229)](_0x212346(0x20b))[_0x212346(0x237)],_0x53e68b=document[_0x212346(0x229)]('#login-password')[_0x212346(0x237)];if(_0x3f52ad[_0x212346(0x22b)]()=='')alert(_0x212346(0x22c));else _0x53e68b['trim']()==''?alert(_0x212346(0x201)):authenticate(_0x3f52ad,_0x53e68b);};function _0x17c8(_0x5cd779,_0x10bd3b){const _0x3131d2=_0x3131();return _0x17c8=function(_0x17c82e,_0x945a1e){_0x17c82e=_0x17c82e-0x1eb;let _0x5e7d33=_0x3131d2[_0x17c82e];return _0x5e7d33;},_0x17c8(_0x5cd779,_0x10bd3b);}document[_0xade7fa(0x229)](_0xade7fa(0x220))['addEventListener'](_0xade7fa(0x228),()=>{login();}),document['querySelector'](_0xade7fa(0x1f2))[_0xade7fa(0x21e)](_0xade7fa(0x22a),_0x34466d=>{const _0x37b99c=_0xade7fa;event[_0x37b99c(0x209)]===0xd&&(_0x34466d[_0x37b99c(0x1ff)](),login());});const authenticate=(_0x33064c,_0x4f94f2)=>{const _0x2e87af=_0xade7fa,_0x13c7df=firebase['auth']();_0x13c7df[_0x2e87af(0x223)](_0x33064c,_0x4f94f2),firebase['auth']()[_0x2e87af(0x223)](_0x33064c,_0x4f94f2)[_0x2e87af(0x21f)](function(_0x3670cc){const _0x126d01=_0x2e87af;var _0x14f316=_0x3670cc['code'],_0x32c5ae=_0x3670cc[_0x126d01(0x20e)];alert(_0x32c5ae);});},showHomepage=()=>{const _0x1ad770=_0xade7fa;document['querySelector'](_0x1ad770(0x20d))['classList'][_0x1ad770(0x224)](_0x1ad770(0x1f6)),document[_0x1ad770(0x229)](_0x1ad770(0x21b))[_0x1ad770(0x1ed)][_0x1ad770(0x224)](_0x1ad770(0x1f6)),document[_0x1ad770(0x229)]('#homepage')[_0x1ad770(0x1ed)][_0x1ad770(0x1f1)]('hide'),document['querySelector'](_0x1ad770(0x222))[_0x1ad770(0x231)][_0x1ad770(0x234)]=_0x1ad770(0x204);},signOut=()=>{const _0x1c077d=_0xade7fa;firebase[_0x1c077d(0x21c)]()[_0x1c077d(0x215)]()[_0x1c077d(0x1fe)](function(){const _0x2a3b46=_0x1c077d;location[_0x2a3b46(0x213)]();})['catch'](function(_0xf60cb3){alert('error\x20signing\x20out,\x20check\x20network\x20connection');});};auth[_0xade7fa(0x22e)](_0x2c50c0=>{_0x2c50c0&&showHomepage();}),document[_0xade7fa(0x229)](_0xade7fa(0x221))[_0xade7fa(0x21e)](_0xade7fa(0x228),()=>{const _0x48482f=_0xade7fa,_0x18bbac=document[_0x48482f(0x229)](_0x48482f(0x20b))['value'];_0x18bbac[_0x48482f(0x22b)]()==''?alert(_0x48482f(0x1f8)):forgotPassword(_0x18bbac);});const forgotPassword=_0x131bd2=>{const _0x65cbe6=_0xade7fa;auth[_0x65cbe6(0x200)](_0x131bd2)[_0x65cbe6(0x1fe)](function(){const _0x495c7f=_0x65cbe6;alert(_0x495c7f(0x1ee));})[_0x65cbe6(0x21f)](function(_0x525f0f){const _0x2dccad=_0x65cbe6;alert(_0x2dccad(0x216));});};
       	
     </script>
   </body>
