--- a/mikrotik-port-forward-generator.html
+++ b/mikrotik-port-forward-generator.html
@@ -468,7 +468,7 @@
       </ul>
       <div id="homepage" class="hide">
         <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-        <span style="font-weight:normal;font-size:14px">Welcome: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+        <span style="font-weight:normal;font-size:14px">E-Mail: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> - Verified Status: [ <span id="email_Verified"></span> ]</span> 
         <button id="verify" style="width:100px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:green" onclick="sendVerificationEmail()">Verify Now!</button>
       </div>	  
