--- a/login/index.html
+++ b/login/index.html
@@ -527,7 +527,9 @@ const provider3 = new firebase.auth.GithubAuthProvider();
          		const email = user.email;
          		const emailVerified = user.emailVerified;
          
-         		document.getElementById('welcome-email').innerHTML = email
+				var user = result.user;
+		 
+         		document.getElementById('welcome-email').innerHTML = user
          
          		if (emailVerified == true) {
          			document.getElementById("verify").style.display = "none"
