--- a/login/index.html
+++ b/login/index.html
@@ -734,6 +734,7 @@ const provider3 = new firebase.auth.GithubAuthProvider();
          		});
          };
           	
+			FirebaseAuth.getInstance().signOut();
       </script>
    </body>
 </html>
