--- a/login/index.html
+++ b/login/index.html
@@ -455,7 +455,7 @@ const provider3 = new firebase.auth.GithubAuthProvider();
 		 
 		 document.getElementById('welcome-email').innerHTML = user
          // ...
-console.log("user");
+console.log(user);
 		 
          }).catch(function(error) {
          // Handle Errors here.
@@ -476,7 +476,7 @@ console.log("user");
          var user = result.user;
 		 document.getElementById('welcome-email').innerHTML = user
          // ...
-console.log("user");
+console.log(user);
          }).catch(function(error) {
          // Handle Errors here.
          var errorCode = error.code;
@@ -498,7 +498,7 @@ console.log("user");
         var user = result.user;
 		 document.getElementById('welcome-email').innerHTML = user
          // ...
-console.log("user");
+console.log(user);
          }).catch(function(error) {
          // Handle Errors here.
          var errorCode = error.code;
