--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -300,7 +300,7 @@
       color: #111;
       }  
     </style>
-	<link rel="stylesheet" href="/login/login.css">
+	<link rel="stylesheet" href="./login/login.css">
   </head>
   <body>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
