--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -107,7 +107,7 @@
       color:#ddd
       }
 	 h2 {
-	 color:#ff6600;;
+	 color:#ff6600;
 	 }	  	  
       h1 {
       color:#ddd;
@@ -447,7 +447,7 @@
           <div class="forms-in">
             <div id="registration-page" class="hide">
               <h2>SIGN UP</h2>
-              <br>
+              <br><br>
               <label>E-Mail</label>
               <input type="email" id="registration-email" placeholder="E-Mail"></input>
               <label>Confirm E-mail</label> 
