--- a/login/index.html
+++ b/login/index.html
@@ -159,152 +159,9 @@
          background-color: #f0f0f0;
          color: #111;
          }  
-         /* LOGIN Content */
-         .forms-out {
-         margin: 0 auto;
-         padding: 0;
-         }
-         .forms-in {
-         width: 100%;
-         margin: 0 auto;
-         color: white;
-         padding: 0;
-         }
-         .forms-in div {
-         padding: 0;
-         max-width: 350px;
-         margin: 0 auto;      
-         border-radius: 5px;
-         margin-bottom: 15px;
-         }
-         .forms-in h3 {
-         text-align: center;
-         }
-         .forms-in input {
-         border: none;
-         width: 100%;
-         margin-bottom: 15px;
-         padding: 10px;
-         box-sizing: border-box;
-         border-radius: 3px;
-         }
-         .forms-in button {
-         border: none;
-         padding: 7px 20px;
-         border-radius: 4px;
-         cursor: pointer;
-         font-weight: bold;
-         margin-top:10px;
-         margin-bottom:15px;
-         }
-         .forms-in button:hover {
-         opacity: 0.7;
-         }
-         .hide {
-         display: none;
-         }
-         #forgot-password {
-         cursor: pointer;
-         }
-         #forgot-password:hover {
-         opacity: 0.7;
-         }
-         #show-register {
-         cursor: pointer;
-         }
-         #show-register:hover {
-         opacity: 0.7;
-         }
-         #show-login {
-         cursor: pointer;
-         }
-         #show-login:hover {
-         opacity: 0.7;
-         }
-         /* The Modal (background) */
-         .modal {
-         display: none; /* Hidden by default */
-         position: fixed; /* Stay in place */
-         z-index: 2; /* Sit on top */
-         padding-top: 150px; /* Location of the box */
-         left: 0;
-         top: 0;
-         width: 100%; /* Full width */
-         height: 100%; /* Full height */
-         overflow: auto; /* Enable scroll if needed */
-         background-color: rgb(0,0,0); /* Fallback color */
-         background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-         }
-         .modal-login {
-         display: block; /* Hidden by default */
-         position: fixed; /* Stay in place */
-         z-index: 1; /* Sit on top */
-         padding-top: 150px; /* Location of the box */
-         left: 0;
-         top: 0;
-         width: 100%; /* Full width */
-         height: 100%; /* Full height */
-         overflow: auto; /* Enable scroll if needed */
-         background-color: rgb(0,0,0); /* Fallback color */
-         background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-         }
-         /* Modal Content */
-         .modal-content {
-         line-height:1.4;
-         border-radius: 5px;
-         background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;
-         color:#ddd;
-         margin: auto;
-         padding: 20px;
-         border: 1px solid #444;
-         width: 400px;
-         box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-         font-weight:bold;
-         }
-         .modal-content p {
-         padding:0;
-         margin:5px 5px 0 17px;
-         display:list-item;
-         line-height:2.0;
-         list-style: disc;
-         }  
-         /* The Close Button */
-         .close {
-         color: #aaaaaa;
-         float: right;
-         font-size: 30px;
-         font-weight: bold;
-         margin-top:-20px;
-         margin-right:-10px;
-         }
-         .close:hover,
-         .close:focus {
-         color: orange;
-         text-decoration: none;
-         cursor: pointer;
-         } 
-         .myButtonGoogle {
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-         width:155px;
-         cursor: pointer;
-         font-weight:normal;
-         float:right;
-         }
-         .myButtonGoogle :hover {
-         opacity: 0.7;
-         }
-         .myButtonGoogle img {
-         width: 32px;
-         padding:0;
-         margin:0;
-         }
-         .myButtonGoogle .text {
-         padding:0;
-         margin:0;
-         }  
-      </style>
+
+       </style> 
+ <link rel="stylesheet" href="./login/login.css">
    </head>
    <body>
       <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
