--- a/mikrotik/welcome.html
+++ b/mikrotik/welcome.html
@@ -22,7 +22,8 @@ pre {
     white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
     word-wrap: break-word; /* IE 5.5+ */
 }  
-</style>   
+ </style> 
+ <link rel="stylesheet" href="./login/login.css">   
 <link rel="stylesheet" href="//buananetpbun.github.io/mikrotik/highlightjs/styles/github.css">
 <script src="//buananetpbun.github.io/mikrotik/highlightjs/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
