--- a/sitemap.html
+++ b/sitemap.html
@@ -26,7 +26,8 @@
                         @media only screen and (max-width:900px) { div.section div { min-width:250px; } }
 			@media only screen and (max-width:800px) { div.section div { width:50%; } div.section { -webkit-column-count:2; -moz-column-count:2; column-count:2; } }
 			@media only screen and (max-width:500px) { div.section div { width:100%; } div.section { -webkit-column-count:1; -moz-column-count:1; column-count:1; } div.section p:after, div.section p a:after { display:none; } }
-		</style>
+		 </style> 
+ <link rel="stylesheet" href="./login/login.css">
 		</head>
 		<body>
 		<h1>Sitemap</h1>
