--- a/ecmp.html
+++ b/ecmp.html
@@ -541,11 +541,11 @@
               <h2>SIGN UP</h2>
               <br><br>
               <label>E-Mail</label>
-              <input type="email" id="registration-email" placeholder="E-Mail"></input>
+              <input style="margin-top:5px" type="email" id="registration-email" placeholder="E-Mail"></input>
               <label>Confirm E-mail</label> 
-              <input type="email" id="registration-reemail" autocomplete="disable" placeholder="Confirm E-Mail"></input>
+              <input style="margin-top:5px" type="email" id="registration-reemail" autocomplete="disable" placeholder="Confirm E-Mail"></input>
               <label>Password <span style="font-weight:normal; font-size:13px"> - Don't use your real email password!</span></label>
-              <input type="password" id="registration-password" placeholder="Password"></input>
+              <input style="margin-top:5px" type="password" id="registration-password" placeholder="Password"></input>
               <button style="width:100% !important;" id="register">Sign Up</button><br>
               <span style="font-weight:normal !important; float:right"><span id="show-login">Already a member? Sign-In</span></span>
 			  <br>
@@ -558,9 +558,9 @@
               </span>
               <br><br>
               <label>E-Mail</label>
-              <input type="email" id="login-email" placeholder="E-Mail"></input>
+              <input style="margin-top:5px" type="email" id="login-email" placeholder="E-Mail"></input>
               <label>Password</label>
-              <input type="password" id="login-password" placeholder="Password"></input>
+              <input style="margin-top:5px" type="password" id="login-password" placeholder="Password"></input>
               <button style="width:100% !important;" id="login">Login</button>
               <span style="font-weight:normal"> <span id="forgot-password">Forgot Password?</span></span>
               <span style="font-weight:normal !important; float:right"><span id="show-register">Not a member? Sign-Up</span></span>	
