--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -182,6 +182,10 @@
       font-size:15px;
       font-weight:bold;
       }
+      button:hover {
+      background-color: #ccc;
+      color: #111;
+      }	  
       input[type=text], select, textarea {
       width: 100%;
       padding: 5px;
