--- a/pcc.html
+++ b/pcc.html
@@ -506,6 +506,7 @@
         /routing table remove [find comment="LB By BNT"]
       </div>
     </div>
+    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"></div>		
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
