--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       border-radius: 5px; 
       }
       button:hover {
-      background-color: #ccc;
+      background-color: #ff6600;
       color: #111;
       }
       /* LOGIN Content */
