--- a/mikrotik-port-forward-generator.html
+++ b/mikrotik-port-forward-generator.html
@@ -278,40 +278,11 @@
       background:#ddd;
       text-align:center;
       }
-	  .mymenu {
-      z-index: 4;
-      margin:0 auto;
-      background-color: #f9f9f9;
-      width:650px;
-      border-radius:0 0 5px 5px;
-      border: 2px solid #f9f9f9;
-      font-weight:bold;
-      font-size:14px;
-      position:relative;
-      }
-      .mymenu ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      background-color: #f9f9f9;
-	  background: url("https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png") no-repeat right !important;
-	  margin-right:10px;
-      }
-      .mymenu li {
-      float: left;
-      }
-      .mymenu li a {
-      display: block;
-      color: #555;
-      text-align: center;
-      padding: 8px 10px;
-      text-decoration: none;
-      }
-      .mymenu li a:hover {
-      background-color: #f0f0f0;
-      color: #111;
-      }     
+
+
+
+
+     
  
      </style> 
  <link rel="stylesheet" href="./login/login.css">
@@ -379,11 +350,11 @@
               <h2>SIGN UP</h2>
               <br><br>
               <label>E-Mail</label>
-              <input type="email" id="registration-email" placeholder="E-Mail"></input>
+              <input type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail</label> 
-              <input type="email" id="registration-reemail" autocomplete="disable" placeholder="Confirm E-Mail"></input>
+              <input type="email" id="registration-reemail" autocomplete="disable" placeholder="Confirm E-Mail">
               <label>Password <span style="font-weight:normal; font-size:13px"> - Don't use your real email password!</span></label>
-              <input type="password" id="registration-password" placeholder="Password"></input>
+              <input type="password" id="registration-password" placeholder="Password">
               <button style="width:100% !important;" id="register">Sign Up</button><br>
               <span style="font-weight:normal !important; float:right"><span id="show-login">Already a member? Sign-In</span></span>
 			  <br>
@@ -396,9 +367,9 @@
               </span>
               <br><br>
               <label>E-Mail</label>
-              <input type="email" id="login-email" placeholder="E-Mail"></input>
+              <input type="email" id="login-email" placeholder="E-Mail">
               <label>Password</label>
-              <input type="password" id="login-password" placeholder="Password"></input>
+              <input type="password" id="login-password" placeholder="Password">
               <button style="width:100% !important;" id="login">Login</button>
               <span style="font-weight:normal"> <span id="forgot-password">Forgot Password?</span></span>
               <span style="font-weight:normal !important; float:right"><span id="show-register">Not a member? Sign-Up</span></span>	
