--- a/mikrotik-username-password-hotspot-generator.html
+++ b/mikrotik-username-password-hotspot-generator.html
@@ -382,7 +382,7 @@
               <label>E-Mail</label>
               <input type="email" id="registration-email" placeholder="E-Mail">
               <label>Confirm E-mail</label> 
-              <input type="email" id="registration-reemail" autocomplete="disable" placeholder="Confirm E-Mail">
+              <input type="email" id="registration-reemail" autocomplete="off" placeholder="Confirm E-Mail">
               <label>Password <span style="font-weight:normal; font-size:13px"> - Don't use your real email password!</span></label>
               <input type="password" id="registration-password" placeholder="Password">
               <button style="width:100% !important;" id="register">Sign Up</button><br>
