--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -2041,7 +2041,7 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
         <div style="font-size:20px;font-weight:bold">Want to give me a Gift ?</div>
         <div style="font-weight:bold; margin-top:10px; color:#fff !important">
           <p><span style="color:#ffffff !important; font-size:16px">PayPal</span> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://paypal.me/agusramadhani1">paypal.me/agusramadhani1</a></p>
-          <p><span style="color:#ffffff !important; font-size:16px">Saweria</span> <a target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
+          <p><span style="color:#ffffff !important; font-size:16px">Saweria</span> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://saweria.co/buananetpbun">saweria.co/buananetpbun</a></p>
           <p><span style="color:#ffffff !important; font-size:16px">Buymeacoffee</span> <a style="font-size:14px;color:#ff6600;" target="_blank" href="https://www.buymeacoffee.com/bntpbun">buymeacoffee.com/bntpbun</a></p>
           <p><span style="color:#ffffff !important; font-size:16px">Bitcoin</span> <span style="font-size:11px;color:#ff6600">bc1qazx09937at9za695m39xzjvqt8tjncgwep4ymf</span></p>
           <br>
