--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -822,7 +822,7 @@
         /routing table remove [find comment="ROUTING-GAME-BY-BNT"]
       </div>
     </div>
-    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"></div>
+    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">WELCOME :)<br>PLEASE VERIFY YOUR E-MAIL FIRST FOR ACTIVATED!</div>
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
