--- a/mikrotik-pcq-burst-rate-queue-size-generator.html
+++ b/mikrotik-pcq-burst-rate-queue-size-generator.html
@@ -410,7 +410,7 @@
         </div>
       </div>
     </div>
-    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"></div>
+    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">WELCOME :)<br>PLEASE VERIFY YOUR E-MAIL FIRST FOR ACTIVATED!</div>
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
