--- a/nth.html
+++ b/nth.html
@@ -472,7 +472,7 @@
         /routing table remove [find comment="LB By BNT"]
       </div>
     </div>
-    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"></div>
+    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">WELCOME :)<br>PLEASE VERIFY YOUR E-MAIL FIRST FOR ACTIVATED!</div>
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
