--- a/mikrotik-share-user-multi-login.html
+++ b/mikrotik-share-user-multi-login.html
@@ -388,7 +388,7 @@
         © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a> - Made for <a target="_blank" href="https://www.mikrotik.com">MikroTik RouterOS</a>
       </div>
     </div>
-    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">WELCOME :)<br>PLEASE VERIFY YOUR E-MAIL FIRST FOR ACTIVATED!</div>
+    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"><div id="center-screen" class="center-screen"></div></div>
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
