--- a/vpn-game-generator2.html
+++ b/vpn-game-generator2.html
@@ -797,7 +797,7 @@
         /ip firewall address-list remove [find list="List-IP-Games"]
       </div>
     </div>
-    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">WELCOME :)<br>PLEASE VERIFY YOUR E-MAIL FIRST FOR ACTIVATED!</div>
+    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"><div id="center-screen" class="center-screen"></div></div>
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
