--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -435,7 +435,7 @@
         /ip address remove [find comment="EXPIRED By BNT"]<br>
       </div>
     </div>
-    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">WELCOME :)<br>PLEASE VERIFY YOUR E-MAIL FIRST FOR ACTIVATED!</div>
+    <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"><div id="center-screen" class="center-screen"></div></div>
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
       <div class="modal-content">
         <div class="forms-out">
