--- a/login/index.html
+++ b/login/index.html
@@ -203,6 +203,7 @@
         </div>
       </div>
     </div>
+	<div id="dialogoverlay"></div><div id="dialogbox"><div><div id="dialogboxhead"></div><div id="dialogboxbody"></div><div id="dialogboxfoot"></div></div></div> 
     <script src="./index.js"></script>
   </body>
 </html>
