--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       }
       /* mouse over link */
       a:hover {
-      color: red;
+      color: #555;
       }
       @media screen and (max-width: 1024px){
       .mymenu {
