--- a/login/index.html
+++ b/login/index.html
@@ -500,9 +500,9 @@
         <span style="font-weight:bold;font-size:14px">IDENTIFIER EMAIL: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span><br><br>
         <span style="font-weight:bold; font-size:14px">E-MAIL ACTIVATED: [ <span id="email_Verified"></span> ]</span> <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button><br>
 		<br><br>
-		<button style="width:auto !important; padding:10px; margin-left:0x; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-		<button style="width:auto !important; padding:10px; margin-left:6px; margin-bottom:10px; font-weight:bold; font-size:14px" id="delete">Change Password</button>
-        <button style="width:auto !important; padding:10px; margin-left:6px; margin-bottom:10px; font-weight:bold; font-size:14px" id="delete">Delete Account</button>
+		<button  id="signout">Logout</button>
+		<button  id="change-pass">Change Password</button>
+        <button  id="delete-user">Delete Account</button>
       </div>
 	  </div> 
     <div id="myLogin" class="modal-login">
