--- a/index.html
+++ b/index.html
@@ -545,14 +545,16 @@
       </ul>
       <div id="show-login-menu">
         <button style="width:100px !important;  padding:4px; margin:4px; margin-left:10px; margin-bottom:10px;font-weight:bold" onclick="callmodalLogin();showLogin()">Login</button>
-        <button style="width:100px !important; padding:4px; margin:4px; font-weight:bold" onclick="callmodalLogin();showRegistration()">Sign Up</button>
+        <button style="width:100px !important; padding:4px; margin:4px; font-weight:bold" onclick="javascript:callmodal();showRegistration()">Sign Up</button>
         <span style="font-size:13px; font-weight:normal; color:#ff6600">Only one login to access all my tools, join now, it's free!</span>
       </div>
       <div id="homepage" class="hide">
         <button style="width:80px !important; padding:4px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-        <span style="font-weight:normal;font-size:14px">MEMBER-ID: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+		<button id="ShowProfile" style="width:80px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:#ff6600" onclick="window.open('https://buananetpbun.github.io/login', '_blank');">Profile</button>
+        <span style="font-weight:normal;font-size:14px">MEMBER: <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
         <span style="font-weight:normal; font-size:14px"> - ACTIVATED: [ <span id="email_Verified"></span> ]</span>
         <button id="verify" style="width:180px !important; padding:4px; margin:4px; font-weight:bold;font-size:14px; background-color:red">VERIFY YOUR E-MAIL</button>
+		
       </div>
     </div>
     <div class="content">
